# github-actions-poetry-in-docker

./: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
gapid/: __init__.py
