[tool.poetry]
name = "gapid"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
gensim = "^3.8.3"
uWSGI = "^2.0.19"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pandas = "^1.1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
